# Slidr

./: .gitignore  CMakeLists.txt  README.md  SlidrConfig.cmake  compile_and_bench.sh  compile_and_benchmark.sh  compile_and_gprof.sh  compile_and_release.sh  compile_and_run.sh  compile_and_test.sh  debug_and_run.sh  game_session_epoch.json  generate_patterns.sh  gprof_and_run.sh  release_and_run.sh  requirements.txt  run_grpof.sh  test_and_run.sh  training-patterns
apps/: CMakeLists.txt  app.cc
bench/: CMakeLists.txt  nodebenchlib.cc
benchmarks/: CMakeLists.txt  mathbenchmark.cc  nodebenchmark.cc  nodebenchmarklib.cc  solverbenchmark.cc
docs/: CMakeLists.txt
gprof/: CMakeLists.txt  solverbenchmark.cc
include/constants/: constantslib.hpp
include/container/: bucketqueuelib.hpp
include/creator/: creatorlib.hpp
include/filesystem/: saveloadlib.hpp
include/gui/: animationlib.hpp  board.hpp  boardlib.hpp  buttonlib.hpp  celebrationlib.hpp  colourlib.hpp  loadinglib.hpp  screen.hpp  screenlib.hpp
include/math/: mathlib.hpp
include/node/: nodelib.hpp
include/pattern/: deserializationlib.hpp  patternlib.hpp  serializationlib.hpp
include/prompt/: promptlib.hpp
include/slidr/constants/: constantslib.hpp
include/slidr/container/: bucketqueuelib.hpp
include/slidr/creator/: creatorlib.hpp
include/slidr/math/: mathlib.hpp
include/slidr/node/: nodelib.hpp
include/slidr/prompt/: promptlib.hpp
include/slidr/solver/: solverlib.hpp
include/solver/: solverlib.hpp
include/terminal/: terminallib.hpp
slidr/solver/: solverlib.hpp
src/: CMakeLists.txt  animationlib.cc  boardlib.cc  bucketqueuelib.cc  celebration.cc  loadinglib.cc  nodelib.cc  patternlib.cc  promptlib.cc  saveloadlib.cc  screen.cc  screenlib.cc  solverlib.cc  terminallib.cc
tests/: CMakeLists.txt  constantstestlib.cc  containertestlib.cc  creatortestlib.cc  fifteen-puzzle-patterns-testing.txt  fifteen-puzzle-patterns.txt  mathtestlib.cc  nodetestlib.cc  patterntestlib.cc  prompttestlib.cc  solvertestlib.cc  terminaltestlib.cc  testlib.cc
